--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -8,33 +8,46 @@
 
     <TextView
         android:id="@+id/textViewText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="192dp"
-        android:layout_marginBottom="102dp"
-        android:text="Title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewDisplay" />
+        android:layout_width="168dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="116dp"
+        android:text="@string/title"
+        android:textAlignment="center"
+        android:textSize="29sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/buttonClose"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewDisplay"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginBottom="102dp"
+        android:layout_width="411dp"
+        android:layout_height="320dp"
+        android:layout_marginTop="16dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textViewText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.679"
         app:srcCompat="@android:drawable/screen_background_light" />
 
     <Button
         android:id="@+id/buttonClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CLOSE"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="667dp" />
+        android:layout_width="108dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="60dp"
+        android:background="@color/teal_200"
+        android:backgroundTint="#FFFFFF"
+        android:text="@string/close"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
