--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
     tools:context=".DisplayActivity">
 
     <TextView
         android:id="@+id/textViewText"
-        android:layout_width="168dp"
-        android:layout_height="35dp"
+        android:layout_width="409dp"
+        android:layout_height="57dp"
         android:layout_marginBottom="116dp"
         android:text="@string/title"
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="29sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/buttonClose"
