Add textView, update naming conventions, and create string array

--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -30,6 +30,7 @@
         android:layout_height="320dp"
         android:layout_marginTop="16dp"
         android:background="#FFFFFF"
+        android:contentDescription="Image Display"
         app:layout_constraintBottom_toTopOf="@+id/textViewText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
