--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="105dp"
+        android:layout_width="409dp"
+        android:layout_height="465dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,13 +17,13 @@
 
     <TextView
         android:id="@+id/textDirection"
-        android:layout_width="210dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="93dp"
-        android:layout_marginBottom="46dp"
+        android:layout_width="329dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="84dp"
+        android:gravity="center"
         android:text="@string/instructions"
-        app:layout_constraintBottom_toTopOf="@+id/recycler"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
