--- a/app/src/main/res/layout/recycler_layout.xml
+++ b/app/src/main/res/layout/recycler_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="150dp"
+        android:contentDescription="@string/image_display"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
