--- a/app/src/main/res/layout/fragment_selection.xml
+++ b/app/src/main/res/layout/fragment_selection.xml
@@ -6,7 +6,7 @@
     tools:context=".SelectionFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </FrameLayout>
